--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
 		<a href="shop.html" class="item_menu">Shop</a>  <!--Contain all the item product-->
 		<a href="cart.html" class="item_menu">My Cart</a>  <!--display all their cart item-->
         <a href="wheel.html" class="item-menu">Spin and Win</a> <!--Spin wheel to get voucher or points-->
-		<a href="#" class="item_menu">Services</a>   <!--All the delivery services-->
-		<a href="#" class="item_menu">Contact us</a>  <!--Include our address, contact, email-->
+		<a href="services.html" class="item_menu">Services</a>   <!--All the delivery services-->
+		<a href="contact.html" class="item_menu">Contact us</a>  <!--Include our address, contact, email-->
 	</nav>
 	<main>
 		Main Content enter here
