--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>My Cart</title>
     <link rel="stylesheet" type="text/css" href="css/cart.css">
 	<link rel="icon" href="image/logo.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -20,9 +20,9 @@
 		<a href="index.html" class="item_menu">Home</a> <!--Information about our shop and NP-->
 		<a href="login.html" class="item_menu">Login</a> <!--For user to login to their account-->
 		<a href="shop.html" class="item_menu">Shop</a>  <!--Contain all the item product-->
-        <a href="#" class="item_menu">My Cart</a>  <!--Contain all the item product-->
+        <a href="cart.html" class="item_menu">My Cart</a>  <!--Contain all the item product-->
         <a href="wheel.html" class="item-menu">Spin and Win</a> <!--Spin wheel to get voucher or points-->
-		<a href="#" class="item_menu">Services</a>   <!--All the delivery services-->
+		<a href="services.html" class="item_menu">Services</a>   <!--All the delivery services-->
 		<a href="contact.html" class="item_menu">Contact us</a>  <!--Include our address, contact, email-->
 	</nav>
 	<main>
