--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 		</div>
 	</header>
 	<nav class="menu">
-		<a href="#" class="item_menu">Home</a> <!--Information about our shop and NP-->
+		<a href="index.html" class="item_menu">Home</a> <!--Information about our shop and NP-->
 		<a href="login.html" class="item_menu">Login</a> <!--For user to login to their account-->
 		<a href="shop.html" class="item_menu">Shop</a>  <!--display all their cart item-->
 		<a href="cart.html" class="item_menu">My Cart</a>  <!--Contain all the item product-->
         <a href="wheel.html" class="item-menu">Spin and Win</a> <!--Spin wheel to get voucher or points-->
-		<a href="#" class="item_menu">Services</a>   <!--All the delivery services-->
+		<a href="services.html" class="item_menu">Services</a>   <!--All the delivery services-->
 		<a href="contact.html" class="item_menu">Contact us</a>  <!--Include our address, contact, email-->
 	</nav>
 	<main>
