Changing the wheel to game and updating the readme

--- a/game.html
+++ b/game.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spin and Win</title>
-    <link rel="stylesheet" type="text/css" href="css/wheel.css">
+    <title>Game</title>
+    <link rel="stylesheet" type="text/css" href="css/game.css">
 	<link rel="icon" href="image/logo.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
-		<h1>SPIN AND WIN</h1>
+		<h1>GAMES</h1>
 		<div class="top">
 			<a href="#" class="menu_icon"><i class="material-icons">dehaze</i></a>
 		</div>
@@ -21,7 +21,7 @@
 		<a href="login.html" class="item_menu">Login</a> <!--For user to login to their account-->
 		<a href="shop.html" class="item_menu">Shop</a>  <!--Contain all the item product-->
         <a href="cart.html" class="item_menu">My Cart</a>  <!--display all their cart item-->
-        <a href="wheel.html" class="item-menu">Spin and Win</a> <!--Spin wheel to get voucher or points-->
+        <a href="game.html" class="item-menu">Games</a> <!--Spin wheel to get voucher or points-->
 		<a href="services.html" class="item_menu">Services</a>   <!--All the delivery services-->
 		<a href="contact.html" class="item_menu">Contact us</a>  <!--Include our address, contact, email-->
 	</nav>
@@ -32,7 +32,7 @@
 		Copyright license???
 	</footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script type="text/javascript" src="js/wheel.js"></script>
+	<script type="text/javascript" src="js/game.js"></script>
     <div class="loader"></div>
 </body>
 </html>
