--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		Main content enter here
 	</main>
     <footer>
-		Copyright license???
+		All content copyright © 2022, ZiJie and Natalie.
 	</footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
