I have added the login and sign in feature
Please try to download and see if it works on your side

--- a/ID_Asst2/index.html
+++ b/ID_Asst2/index.html
@@ -30,7 +30,7 @@
     <header class="showcase">
         <div class="container showcase-inner">
             <h1>About Us</h1>
-            <p>Ngee Ann Polytechnic was opened on 1963. In Ngee Ann Polytechnic, you will be able to graduate with diploma and a minor. We offer many CCAs and Modules for students to select. So, what are you waiting for? Come Be Part Of The Xtra.</p>
+            <p>Ngee Ann Polytechnic was opened on 1963. In Ngee Ann Polytechnic, you will be able to graduate with diploma and a minor. We offer many CCAs and Modules for students to select. Be Part Of Xtra. A Poly Like No Others.</p>
             <a href="https://www.np.edu.sg" target="_blank" class="btn">Read More</a>
         </div>
     </header>
