Updated interface and login/sign in

--- a/shop.html
+++ b/shop.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="css/shopmenu.css">
     <title>Shop</title>
-    <link rel="stylesheet" type="text/css" href="css/shop.css">
-	<link rel="icon" href="image/logo.png">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <header>
-		<h1>SHOP</h1>
-		<div class="top">
-			<a href="#" class="menu_icon"><i class="material-icons">dehaze</i></a>
-		</div>
-	</header>
-	<nav class="menu">
-		<a href="index.html" class="item_menu">Home</a> <!--Information about our shop and NP-->
-		<a href="login.html" class="item_menu">Login</a> <!--For user to login to their account-->
-		<a href="shop.html" class="item_menu">Shop</a>  <!--Contain all the item product-->
-        <a href="cart.html" class="item_menu">My Cart</a>  <!--display all their cart item-->
-        <a href="game.html" class="item-menu">Games</a> <!--Spin wheel to get voucher or points-->
-		<a href="services.html" class="item_menu">Services</a>   <!--All the delivery services-->
-		<a href="contact.html" class="item_menu">Contact us</a>  <!--Include our address, contact, email-->
-	</nav>
-	<main>
-		Main content enter here
-	</main>
-    <footer>
-		All content copyright © 2022, ZiJie and Natalie.
-	</footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script type="text/javascript" src="js/shop.js"></script>
-    <div class="loader"></div>
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                         <li><a href="index.html">Home</a></li>
+                         <li><a href="login.html">Login</a></li>
+                         <li><a href="shop.html">Shop</a></li>
+                         <li><a href="cart.html">My Cart</a></li>
+                         <li><a href="game.html">Game</a></li>
+                         <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <header class="showcase">
+        <div class="container showcase-inner">
+            <h1>About Us</h1>
+            <p>Ngee Ann Polytechnic was opened on 1963. In Ngee Ann Polytechnic, you will be able to graduate with diploma and a minor. We offer many CCAs and Modules for students to select. So, what are you waiting for? Come Be Part Of The Xtra.</p>
+            <a href="https://www.np.edu.sg" target="_blank" class="btn">Read More</a>
+        </div>
+    </header>
 </body>
 </html>
