--- a/login.html
+++ b/login.html
@@ -4,40 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/login.css">
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/login.css">
-	<link rel="icon" href="image/logo.png">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 </head>
 <body>
-		<div class="main_div">
-            <div class="title">Login</div>
-            <form action="#">
-              <div class="input_box">
-                <input type="text" placeholder="NP Email" required>
-                <div class="icon"><i class="fas fa-user"></i></div>
-              </div>
-              <div class="input_box">
-                <input type="password" placeholder="Password" required>
-                <div class="icon"><i class="fas fa-lock"></i></div>
-              </div>
-              <div class="option_div">
-                <div class="check_box">
-                  <input type="checkbox">
-                  <span>Remember me</span>
-                </div>
-              </div>
-              <div class="input_box button">
-                <input type="submit" value="Login">
-              </div>
-              <div class="sign_up">
-                Sign up for an account <a href="sign.html">Click here</a>
-              </div>
-            </form>
-          </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script type="text/javascript" src="js/login.js"></script>
-    <div class="loader"></div>
+    <h2>Login or Sign in to your account</h2>
+<div class="container" id="container">
+	<div class="form-container sign-up-container">
+		<form action="#">
+			<h1>Create Account</h1>
+			<input type="text" placeholder="Username" />
+			<input type="email" placeholder="Email" />
+			<input type="password" placeholder="Password" />
+			<button>Sign Up</button>
+		</form>
+	</div>
+	<div class="form-container sign-in-container">
+		<form action="#">
+			<h1>Sign In</h1>
+			<input type="text" placeholder="Username" />
+			<input type="password" placeholder="Password" />
+			<a href="#">Forgot your password?</a>
+			<button>Sign In</button>
+		</form>
+	</div>
+	<div class="overlay-container">
+		<div class="overlay">
+			<div class="overlay-panel overlay-left">
+				<h1>Login your account here </h1>
+				<p>Ready to login? Click the button below.</p>
+				<button class="ghost" id="signIn">Sign In</button>
+			</div>
+			<div class="overlay-panel overlay-right">
+				<h1>Create your account here</h1>
+				<p>Ready to create an account? Click the button below.</p>
+				<button class="ghost" id="signUp">Sign Up</button>
+			</div>
+		</div>
+	</div>
+</div>
+<script src="js/login.js"></script>
 </body>
 </html>
