Contact.html is done

--- a/contact.html
+++ b/contact.html
@@ -5,34 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/contactmenu.css">
     <title>Contact Us</title>
 </head>
 <body>
-    <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-            <div>
-                <div>
-                    <ul>
-                         <li><a href="index.html">Home</a></li>
-                         <li><a href="login.html">Login</a></li>
-                         <li><a href="shop.html">Shop</a></li>
-                         <li><a href="cart.html">My Cart</a></li>
-                         <li><a href="game.html">Game</a></li>
-                         <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
+    <div class="container">
+        <h1 class="brand">Ngee Ann Poly x NP Shop</h1>
+        <div class="wrapper">
+            <div class="company-info">
+                <h1>Ngee Ann Poly x NP Shop</h1>
+                <ul>
+                    <li>Address: 535 Clementi Rd, Singapore 599489</li>
+                    <li>Contact: +65 6466 6555</li>
+                    <li>Webiste: www.np.edu.sg</li>
+                </ul>
+            </div>
+            <div class="contact">
+                <h3>Email Us</h3>
+                <form>
+                    <p>
+                        <label>Name: </label>
+                        <input type="text" name="name">
+                    </p>
+                    <p>
+                        <label>Email Address: </label>
+                        <input type="email" name="email">
+                    </p>
+                    <p>
+                        <label>Phone Number: </label>
+                        <input type="text" name="phone">
+                    </p>
+                    <p class="full">
+                        <label>Comments: </label>
+                        <input type="text" name="comment">
+                    </p>
+                    <p class="full">
+                        <button>Submit</button>
+                    </p>
+                </form>
             </div>
         </div>
     </div>
-    <header class="showcase">
-        <div class="container showcase-inner">
-            <h1>About Us</h1>
-            <p>Ngee Ann Polytechnic was opened on 1963. In Ngee Ann Polytechnic, you will be able to graduate with diploma and a minor. We offer many CCAs and Modules for students to select. So, what are you waiting for? Come Be Part Of The Xtra.</p>
-            <a href="https://www.np.edu.sg" target="_blank" class="btn">Read More</a>
-        </div>
-    </header>
 </body>
 </html>
