--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                          <li><a href="login.html">Login</a></li>
                          <li><a href="shop2.html">Shop</a></li>
                          <li><a href="cart.html">My Cart</a></li>
-                         <li><a href="game2.html">Game</a></li>
+                         <li><a href="game.html">Game</a></li>
                          <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
