--- a/game.html
+++ b/game.html
@@ -28,12 +28,21 @@
             </div>
         </div>
     </div>
-    <header class="showcase">
-        <div class="container showcase-inner">
-            <h1>About Us</h1>
-            <p>Ngee Ann Polytechnic.  Be Part Of Xtra. A Poly Like No Others. Click on the read more below to find out more.</p>
-            <a href="https://www.np.edu.sg" target="_blank" class="btn">Read More</a>
-        </div>
-    </header>
-</body>
+    <div class="wrapper">
+      <div class="container">
+        <canvas id="wheel"></canvas>
+        <button id="spin-btn">Spin</button>
+        <img src="image\pngwing.com.png" alt="spinner-arrow" />
+      </div>
+      <div id="final-value">
+        <p>Click On The Spin Button To Start</p>
+      </div>
+    </div>
+    <!-- Chart JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <!-- Chart JS Plugin for displaying text over chart -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-datalabels/2.1.0/chartjs-plugin-datalabels.min.js"></script>
+    <!-- Script -->
+    <script src="js/game.js"></script>
+  </body>
 </html>
