Shop content updated with some problem

--- a/shop.html
+++ b/shop.html
@@ -291,6 +291,7 @@
                         <li><img src="image/Products/mdf1.jpg" alt="" /></li>
                         <li><img src="image/Products/mdf2.jpg" alt="" /></li>
                         <li><img src="image/Products/p3.jpg" alt="" /></li>
+                        <li><img src="image/Products/rg1.jpg" alt="" /></li>
                     </ul>
                     <div class="arrows-perspective">
                         <div class="carouselPrev">
