--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Home</title>
 </head>
 <body>
+    <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
@@ -27,6 +28,7 @@
             </div>
         </div>
     </div>
+
     <header class="showcase">
         <div class="container showcase-inner">
             <h1>About Us</h1>
