--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <title>Login</title>
 </head>
 <body>
+
     <h2>Login or Sign in to your account</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
@@ -33,15 +34,20 @@
 				<h1>Login your account here </h1>
 				<p>Ready to login? Click the button below.</p>
 				<button class="ghost" id="signIn">Sign In</button>
+				<br>
+				<p class="ghost" id="return" a href="index.html">Return to Menu</p>
 			</div>
 			<div class="overlay-panel overlay-right">
 				<h1>Create your account here</h1>
 				<p>Ready to create an account? Click the button below.</p>
 				<button class="ghost" id="signUp">Sign Up</button>
+				<br>
+				<p class="ghost" id="return">Return to Menu</p>
 			</div>
 		</div>
 	</div>
 </div>
+
 <script src="js/login.js"></script>
 </body>
 </html>
