Shop linked to checkout cart

--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
 </head>
 </head>
 <body>
+  <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
