--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
 </head>
 <body>
-
+    <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
     <h2>Login or Sign in to your account</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
