--- a/cart.html
+++ b/cart.html
@@ -9,24 +9,8 @@
     <title>My Cart</title>
 </head>
 <body>
-    <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-            <div>
-                <div>
-                    <ul>
-                         <li><a href="index.html">Home</a></li>
-                         <li><a href="login.html">Login</a></li>
-                         <li><a href="shop.html">Shop</a></li>
-                         <li><a href="cart.html">My Cart</a></li>
-                         <li><a href="game.html">Game</a></li>
-                         <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div><div class="container-fluid">
+    <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
+    <div class="container-fluid">
         <div class="row">
             <aside class="col-lg-9">
                 <div class="card">
