--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                          <li><a href="index.html">Home</a></li>
                          <li><a href="login.html">Login</a></li>
-                         <li><a href="shop2.html">Shop</a></li>
+                         <li><a href="shop.html">Shop</a></li>
                          <li><a href="cart.html">My Cart</a></li>
                          <li><a href="game.html">Game</a></li>
                          <li><a href="contact.html">Contact</a></li>
