--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
                          <li><a href="cart.html">My Cart</a></li>
                          <li><a href="game.html">Game</a></li>
                          <li><a href="contact.html">Contact</a></li>
+                         <li><a href="profile.html">Profile</a></li>   
                     </ul>
                 </div>
             </div>
