cart,contact,game,home,login,profile

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/contactmenu.css">
+    <link rel="stylesheet" href="css/menu.css">
     <title>Contact Us</title>
 </head>
 <body>
+
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                         <li><a href="index.html">Home</a></li>
+                         <li><a href="login.html">Login</a></li>
+                         <li><a href="shop.html">Shop</a></li>
+                         <li><a href="cart.html">My Cart</a></li>
+                         <li><a href="game.html">Game</a></li>
+                         <li><a href="contact.html">Contact</a></li>
+                         <li><a href="profile.html">Profile</a></li>   
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <h1 class="brand">Ngee Ann Poly x NP Shop</h1>
         <div class="wrapper">
