--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
 
     <header class="showcase">
         <div class="container showcase-inner">
-            <h1>About Us</h1>
-            <p>Ngee Ann Polytechnic.  Be Part Of Xtra. A Poly Like No Others. Click on the read more below to find out more.</p>
+            <h1>Welcome to NP Shop!</h1>
+            <br>
+            <br>
+            <p>Looking for the perfect place to buy Ngee Ann Polytechnic merchandise? Look no further than our online store! At NP Shop, we offer a wide variety of merchandise for students, alumni, and even other students from different schools! With our selection of quality items, you're sure to find the perfect way to show your school pride. Whether you're looking for clothes or accessories emblazoned with the Ngee Ann Polytechnic logo or mugs and snacks, we have something for everyone. 
+                <br>
+                <br>
+                <br>
+                Ngee Ann Polytechnic.  Be Part Of Xtra. A Poly Like No Others. Click on the read more below to find out more about Ngee Ann Poly.</p>
+                <br>
             <a href="https://www.np.edu.sg" target="_blank" class="btn">Read More</a>
         </div>
     </header>
