--- a/login.html
+++ b/login.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
+	<link rel="stylesheet" href="css/menu.css">
     <title>Login</title>
 </head>
 <body>
     <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
+
+	<div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                         <li><a href="index.html">Home</a></li>
+                         <li><a href="login.html">Login</a></li>
+                         <li><a href="shop.html">Shop</a></li>
+                         <li><a href="cart.html">My Cart</a></li>
+                         <li><a href="game.html">Game</a></li>
+                         <li><a href="contact.html">Contact</a></li>
+                         <li><a href="profile.html">Profile</a></li>   
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <h2>Login or Sign in to your account</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
