--- a/profile.html
+++ b/profile.html
@@ -28,12 +28,14 @@
                          <li><a href="cart.html">My Cart</a></li>
                          <li><a href="game.html">Game</a></li>
                          <li><a href="contact.html">Contact</a></li>
-                         <li><a href="profile.html">PROFILE</a></li>
+                         <li><a href="profile.html">Profile</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <div class="student-profile py-4">
         <div class="container">
@@ -45,47 +47,11 @@
                   <h3>Ishmam Ahasan Samin</h3>
                 </div>
                 <div class="card-body">
-                  <p class="mb-0"><strong class="pr-1">Student ID:</strong>321000001</p>
-                  <p class="mb-0"><strong class="pr-1">Class:</strong>4</p>
-                  <p class="mb-0"><strong class="pr-1">Section:</strong>A</p>
+                  <p class="mb-0"><strong class="pr-1">User ID:</strong>321000001</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-8">
-              <div class="card shadow-sm">
-                <div class="card-header bg-transparent border-0">
-                  <h3 class="mb-0"><i class="far fa-clone pr-1"></i>General Information</h3>
-                </div>
-                <div class="card-body pt-0">
-                  <table class="table table-bordered">
-                    <tr>
-                      <th width="30%">Roll</th>
-                      <td width="2%">:</td>
-                      <td>125</td>
-                    </tr>
-                    <tr>
-                      <th width="30%">Academic Year	</th>
-                      <td width="2%">:</td>
-                      <td>2020</td>
-                    </tr>
-                    <tr>
-                      <th width="30%">Gender</th>
-                      <td width="2%">:</td>
-                      <td>Male</td>
-                    </tr>
-                    <tr>
-                      <th width="30%">Religion</th>
-                      <td width="2%">:</td>
-                      <td>Group</td>
-                    </tr>
-                    <tr>
-                      <th width="30%">blood</th>
-                      <td width="2%">:</td>
-                      <td>B+</td>
-                    </tr>
-                  </table>
-                </div>
-              </div>
+           
                 <div style="height: 26px"></div>
               <div class="card shadow-sm">
                 <div class="card-header bg-transparent border-0">
@@ -93,13 +59,35 @@
                 </div>
                 <div class="card-body pt-0">
                     <form>
+                      <label for="uname"><b>First Name</b></label>
                         <input type="text" placeholder="First Name" />
+
+                        <label for="uname"><b>Second Name</b></label>
                         <input type="text" placeholder="Second Name" />
+
+                        <br>
+                        <br>
+                        <label for="uname"><b>Username</b></label>
                         <input type="text" placeholder="Username" />
+                        <br>
+                        <br>
+                        <label for="uname"><b>Mobile</b></label>
                         <input type="number" placeholder="Mobile" />
+                        <br>
+                        <br>
+                        <label for="uname"><b>Email</b></label>
 			            <input type="email" placeholder="Email" />
+                        <br>
+                        <br>
+                  <label for="uname"><b>Address</b></label>
                         <input type="address" placeholder="Address" />
+                        <br>
+                        <br>
+                        <label for="uname"><b>Password</b></label>
 			            <input type="password" placeholder="Password" />
+                        <br>
+                        <br>
+                  <input type="submit">
                     </form>
                 </div>
               </div>
