--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
           <div class="container">
             <canvas id="wheel"></canvas>
             <button id="spin-btn">Spin</button>
-            <img src="image\pngwing.com.png" alt="spinner-arrow" />
+            <img src="image/pngwing.com.png" alt="spinner-arrow" />
           </div>
           <div id="final-value">
             <p>Click On The Spin Button To Start</p>
