fixed the shop.html

--- a/shop.html
+++ b/shop.html
@@ -6,36 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
     <!--Link To CSS-->
-    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/shop.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
     <!--Header-->
-    <div class="nav">
+    <header>
         <div class="nav container">
-            <div class="menu-wrap">
-                <input type="checkbox" class="toggler">
-                <div class="hamburger"><div></div></div>
-                <div class="menu">
-                    <div>
-                        <div>
-                            <ul>
-                                 <li><a href="index.html">Home</a></li>
-                                 <li><a href="login.html">Login</a></li>
-                                 <li><a href="shop.html">Shop</a></li>
-                                 <li><a href="cart.html">My Cart</a></li>
-                                 <li><a href="game.html">Game</a></li>
-                                 <li><a href="contact.html">Contact</a></li>
-                                 <li><a href="profile.html">Profile</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        
-        </div>
             <a href="#" class="logo">NP Shop</a>
             <i class='bx bx-shopping-bag' id="cart-icon"></i>
             <!--Cart-->
@@ -56,7 +34,7 @@
                 <i class='bx bx-x' id="close-cart"></i>
             </div>
         </div>
-    </div>
+    </header>
     <!--Shop-->
     <section class="shop container">
         <h2 class="section-title">Shop Products</h2>
