--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             </div>
         </div>
     </div>
+    
+    <div class="contact">
+        <a href="#"><i class="fa fa-fw fa-cart-plus"></i></a>
+        <a href="#"><i class="fa fa-fw fa-instagram"></i></a>
+        <a href="#"><i class="fa fa-fw fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
+        </div>
+
 
     <header class="showcase">
         <div class="container showcase-inner">
