--- a/login.html
+++ b/login.html
@@ -35,18 +35,18 @@
 	<div class="form-container sign-up-container">
 		<form action="#">
 			<h1>Create Account</h1>
-			<input type="text" placeholder="Username" />
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
-			<button>Sign Up</button>
+			<input type="text" placeholder="Username" id="signupusername"/>
+			<input type="email" placeholder="Email" id="signupemail"/>
+			<input type="password" placeholder="Password" id="signuppassword"/>
+			<button id="signupbutton">Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
 		<form action="#">
 			<h1>Sign In</h1>
-			<input type="text" placeholder="Username" />
-			<input type="password" placeholder="Password" />
-			<button>Sign In</button>
+			<input type="text" placeholder="Username" id="signinusername"/>
+			<input type="password" placeholder="Password" id="signinpassword"/>
+			<button id="signinbutton">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
