added prizelist on the game.html

--- a/game.html
+++ b/game.html
@@ -30,6 +30,12 @@
         </div>
     </div>
 
+    <div class="column1">
+      <div class="container5">
+        <img src="image/prizeslist.jpg" alt="Avatar" class="image1">
+      </div>
+    </div>
+
     <div class="wrapper">
       <div class="container">
         <canvas id="wheel"></canvas>
