Added the loading on index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="loading.html">
     <title>Home</title>
 </head>
 <body>
@@ -52,5 +53,6 @@
             <a href="https://www.np.edu.sg" target="_blank" class="btn">Read More</a>
         </div>
     </header>
+    <script src="js/loading.js"></script>
 </body>
 </html>
