--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css'>
     <link rel="stylesheet" href="css/profile.css">
     <link rel="stylesheet" href="css/menu.css">
-    <title>Home</title>
+    <title>Profile</title>
 </head>
 <body>
     <audio autoplay="" loop="" src="music/Joy To The World - DJ Williams.mp3"></audio>
